# mirror-update

./: ChangeLog.md  Main.hs  MirrorUpdate.hs  README.md  mirror-update.cabal  mirror-update.hook  mirrorupdate.cabal
MirrorUpdate/: mirror-update.hs
MirrorUpdate/Format/: Mirrorlist.hs
MirrorUpdate/Parser/: Mirrorlist.hs
MirrorUpdate/UnParser/: Mirrorlist.hs
Mirrorlist/: Format.hs  Parser.hs  UnParser.hs
