name:                mirror-update
version:             0.1.0.0
synopsis:            update arch linux mirrorlist
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Dominik Xaver Hörl
maintainer:           
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable mirror-update
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.11
  build-depends:       parsec >=3.1 && <3.2
  build-depends:       filepath >= 1.4.1 && < 1.5
  build-depends:       mtl >= 2.2.1 && < 2.3
  build-depends:       process >= 1.4.2 && < 1.7
  build-depends:       directory >= 1.2.6 && < 1.4
  build-depends:       text >= 1.2.2 && < 1.3
  -- hs-source-dirs:      
  default-language:    Haskell2010
