name:                mirror-update
version:             0.1.0.0
synopsis:            update arch linux mirrorlist
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Dominik Xaver Hörl
maintainer:           
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable mirror-update
  main-is:             Main.hs
  other-modules:       MirrorUpdate
  other-modules:       Mirrorlist.Format
  other-modules:       Mirrorlist.Parser
  other-modules:       Mirrorlist.UnParser
  
  other-extensions:    MultiParamTypeClasses
  other-extensions:    OverloadedStrings
  other-extensions:    LambdaCase
  
  build-depends:       attoparsec           >= 0.13.2 && < 0.14
  build-depends:       base                 >= 4.9 && <4.11
  build-depends:       bytestring           >= 0.10.8 && < 0.11
  build-depends:       directory            >= 1.2.6 && < 1.4
  build-depends:       filepath             >= 1.4.1 && < 1.5
  build-depends:       mtl                  >= 2.2.1 && < 2.3
  build-depends:       optparse-applicative >= 0.14.0 && < 0.15
  build-depends:       parsers              >= 0.12.7 && < 0.13
  build-depends:       process              >= 1.4.2 && < 1.7
  build-depends:       temporary            >= 1.2.1 && < 1.3
  build-depends:       text                 >= 1.2.2 && < 1.3
  -- hs-source-dirs:      
  default-language:    Haskell2010
